--- a/index.html
+++ b/index.html
@@ -332,17 +332,17 @@
 						<li><a href="contacts.html">Контакты</a></li>
 					</ul>
 
-					<p>Copyright 2019 Prometherium.com. Все права защищены.</p>
+					<p>Copyright 2019 Icon-trade.ltd. Все права защищены.</p>
 				</div>
 
 				<div class="footer-right">
-					<p>Юридический адрес:</p>
+					<!-- <p>Юридический адрес:</p>
 					<address>
 						170 Oxford Street, London, United Kingdom, W1D 1NQ
-					</address>
+					</address> -->
 
 					<p>Тех. поддержка</p>
-					<a href="mailto:admin@prometherium.com">admin@prometherium.com</a>
+					<a href="mailto:admin@prometherium.com">admin@icontrade.com</a>
 
 					<p>Платежные системы:</p>
 					<img src="img/footer-payeer.png" alt="Icon trade. Invest company">
