--- a/index.html
+++ b/index.html
@@ -216,33 +216,33 @@
 									Количество тикетов:
 								</div>
 								<div class="statistic-right-top-item ticket2">
-									<input
+									<input class="ticket-js"
 										type="range"
 										min="1"
 										max="200"
 										step="1"
-										value="50"
+										value="1"
 										data-orientation="horizontal"
 									>
 									<img src="img/progress-bar.jpg" alt="">
 								</div>
 								<div class="statistic-right-top-item ticket3">
-									<span>345</span> тикета
+									<span>1</span> тикета
 								</div>
 							</div>
 						</div>
 
 						<div class="statistic-right-bottom">
 							<div class="statistic-right-bottom-left">
-								$<span>45</span>
+								$<span>9</span>
 								<p>Ежемесячный доход</p>
 							</div>
 							<div class="statistic-right-bottom-middle">
-								$<span>135</span>
+								$<span>28</span>
 								<p>Доход за 3 месяца</p>
 							</div>
 							<div class="statistic-right-bottom-right">
-								$<span>995</span>
+								$<span>112</span>
 								<p>Доход за год</p>
 							</div>
 						</div>
