--- a/reg.html
+++ b/reg.html
@@ -129,13 +129,14 @@
 									}
 
 									.select2-container .select2-selection--single {
-										height: 56px;
+										height: 57px;
 										border-radius: 15px;
-										margin-top: -10px;
+										margin-top: -14px;
 										box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 										outline: none;
-										padding-top: 12px;
+										padding-top: 14px;
 										text-align: center;
+										border: none;
 									}
 
 									.select2-container--default .select2-results__option--highlighted[aria-selected] {
