--- a/about.html
+++ b/about.html
@@ -120,7 +120,7 @@
 				<div class="why-icon-list">
 					<div class="why-icon-item">
 						<!-- <img src="img/why-icon-icon1.png" alt="Icon trade. Invest company"> -->
-						<h2>Команда проффесианалов</h2>
+						<h2>Команда профессионалов</h2>
 						<p>
 							С нами сотрудничают аналитики со стажем торговли более 7 лет.
 						</p>
@@ -187,7 +187,7 @@
 					</div>
 
 					<div class="document-pdf-item">
-						<a href="">Проверить</a>
+						<a href="https://beta.companieshouse.gov.uk/company/11920388" target="_blank">Проверить</a>
 					</div>
 				</div>
 			</div>
