--- a/index.html
+++ b/index.html
@@ -126,11 +126,13 @@
 					<div id="accordion-js" class="accordion">
 						<h2>Криптовалютный трейдинг</h2>
 						<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+							Криптотрейдинг - один из основных способов заработка на криптовалюте. Задача остается прежней: купить как можно дешевле, продать дороже и получить прибыль.<br>
+							Основным преимуществом является высокая прибыльность и минимальные риски. Однако новички часто заходят на биржи и торгуют интуитивно, что приводит к истощению капитала в первые же дни. Мы же разработали собственные стратегии с помощью которых делаем максимальную прибыль.
 						</p>
 						<h2>Маржинальная торговля криптовалютой</h2>
 						<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+							Маржинальная торговля позволяет трейдеру открывать позиции, используя «плечо» — заемный капитал. Например, мы открыли
+							маржинальную позицию с плечом 2Х. Цена наших базовых активов выросла на 10%. Благодаря использованию плеча 2Х, такая позиция принесет нам прибыль 20%. Стандартные сделки совершаются с плечом 1:1.
 						</p>
 					</div>
 				</div>
@@ -148,27 +150,27 @@
 				<div class="our-team-list wow fadeInUp" data-wow-duration="1.5s">
 					<div class="our-team-item">
 						<img src="img/out-team-photo1.png" alt="Icon trade. Invest company">
-						<h3>Gabriel Prise</h3>
+						<h3>Alexandro Edulla</h3>
 						<p>Заработано за прошедший год:</p>
-						<span>230-370%</span>
+						<span>283-294%</span>
 					</div>
 					<div class="our-team-item">
 						<img src="img/out-team-photo2.png" alt="Icon trade. Invest company">
-						<h3>Mark Ivanov</h3>
+						<h3>Artem Maeyskiy</h3>
 						<p>Заработано за прошедший год:</p>
-						<span class="item-bg">230-370%</span>
+						<span class="item-bg">312-340%</span>
 					</div>
 					<div class="our-team-item">
 						<img src="img/out-team-photo3.png" alt="Icon trade. Invest company">
-						<h3>Roman Kan</h3>
+						<h3>Roman Kushnarev</h3>
 						<p>Заработано за прошедший год:</p>
-						<span>230-370%</span>
+						<span>162-170%</span>
 					</div>
 					<div class="our-team-item">
 						<img src="img/out-team-photo4.png" alt="Icon trade. Invest company">
-						<h3>Den Torasov</h3>
+						<h3>Denis Cyplenkov</h3>
 						<p>Заработано за прошедший год:</p>
-						<span class="item-bg">230-370%</span>
+						<span class="item-bg">383-395%</span>
 					</div>
 				</div>
 			</div>
@@ -188,7 +190,7 @@
 								<img src="img/statistic-icon1.png" alt="Icon trade. Invest company">
 							</div>
 							<div class="statistic-left-top-text">
-								<span>214 чел.</span>
+								<span>137 партнеров</span>
 								<p>
 									Количество клиентов<br>с приобретенными пакетами
 								</p>
@@ -199,7 +201,7 @@
 								<img src="img/statistic-icon2.png" alt="Icon trade. Invest company">
 							</div>
 							<div class="statistic-left-bottom-text">
-								<span>10932</span>
+								<span>259 контрактов</span>
 								<p>
 									Куплено контрактов<br>инвесторами IconTradeCompany
 								</p>
@@ -227,7 +229,7 @@
 									<img src="img/progress-bar.jpg" alt="">
 								</div>
 								<div class="statistic-right-top-item ticket3">
-									<span>1</span> тикета
+									<span>1 тикет</span>
 								</div>
 							</div>
 						</div>
@@ -265,7 +267,7 @@
 							Все личные данные клиентов, добровольно переданные компании «Icon Trade Company» во время регистрации, не подлежат общественной огласке, распространению в Сети и их передаче третьим лицам, согласно Закону «О защите персональных данных».
 						</p>
 						<p>
-							Личная информация клиента используется исключительно для оптимизации инвестиционного процесса, его реализации в рамках компании «Icon Trade Company и улучшения качества обслуживания клиентов.
+							Личная информация клиента используется исключительно для оптимизации инвестиционного процесса, его реализации в рамках компании «Icon Trade Company» и улучшения качества обслуживания клиентов.
 						</p>
 						<p>
 							Серверы компании и база данных, в которой хранится информация о клиенте, проводимых транзакциях, активности инвесторов, надежно защищены от хакерских атак и программных сбоев по типу «Отказ в обслуживании».
@@ -286,7 +288,7 @@
 							</div>
 						</div>
 
-						<a href="">Проверить в реестре</a>
+						<a href="https://beta.companieshouse.gov.uk/company/11920388" target="_blank">Проверить в реестре</a>
 					</div>
 				</div>
 			</div>
