--- a/about.html
+++ b/about.html
@@ -97,8 +97,8 @@
 						</p>
 
 						<div class="header-promo-bottom-about-icon-left-pdf">
-							<a href="pdf/1.pdf" download>Посмотреть отчет</a>
-							<a href="pdf/2.pdf" download>Скачать презентацию</a>
+							<a href="pdf/MEMARTS-1.pdf" download>Посмотреть отчет</a>
+							<a href="pdf/MEMARTS-1.pdf" download>Скачать презентацию</a>
 						</div>
 					</div>
 
