--- a/faq.html
+++ b/faq.html
@@ -92,59 +92,82 @@
 					<div id="accordion-js2" class="accordion2 wow slideInRight" data-wow-duration="1.5s" data-wow-delay="0.1s">
 						<h2>Где зарегистрирована компания?</h2>
 						<p>
-							Заходите в личный кабинет, пополняете его любыми из 3 представленных способов. Заходите в раздел ‘’контракты’’ выбираете количество контрактов и нажимаете купить. После чего ваша инвестиция будет оформлена и на следующий день вам начислят ваши первые проценты. Чем больше контрактов, тем больше % доходности.
+							Компания iCon официально зарегистрирована в Лондоне, Великобритания. Всю документацию и адрес вы можете посмотреть на сайте в разделе “О iCon”
 						</p>
+
 						<h2>С чего начать?</h2>
 						<p>
-							Заходите в личный кабинет, пополняете его любыми из 3 представленных способов. Заходите в раздел ‘’контракты’’ выбираете количество контрактов и нажимаете купить. После чего ваша инвестиция будет оформлена и на следующий день вам начислят ваши первые проценты. Чем больше контрактов, тем больше % доходности.
+							Для того, чтобы стать Инвестором компании «iCon» Вам необходимо пройти регистрацию и приобрести контракт в личном кабинете.
 						</p>
+
 						<h2>Как приобрести контракт компании iCon?</h2>
 						<p>
 							Заходите в личный кабинет, пополняете его любыми из 3 представленных способов. Заходите в раздел ‘’контракты’’ выбираете количество контрактов и нажимаете купить. После чего ваша инвестиция будет оформлена и на следующий день вам начислят ваши первые проценты. Чем больше контрактов, тем больше % доходности.
 						</p>
+
 						<h2>Какие способы ввода и вывода?</h2>
 						<p>
-							Заходите в личный кабинет, пополняете его любыми из 3 представленных способов. Заходите в раздел ‘’контракты’’ выбираете количество контрактов и нажимаете купить. После чего ваша инвестиция будет оформлена и на следующий день вам начислят ваши первые проценты. Чем больше контрактов, тем больше % доходности.
+							Вы можете пополнять и выводить на любую из представленных платежных систем, таких как: Payeer, AdvCash, PerfectMoney
 						</p>
+
 						<h2>Какая минимальная сумма для старта?</h2>
 						<p>
-							Заходите в личный кабинет, пополняете его любыми из 3 представленных способов. Заходите в раздел ‘’контракты’’ выбираете количество контрактов и нажимаете купить. После чего ваша инвестиция будет оформлена и на следующий день вам начислят ваши первые проценты. Чем больше контрактов, тем больше % доходности.
+							Минимальная сумма для старта 1 контракт который равен 50$
 						</p>
+
 						<h2>Как скоро я смогу получить прибыль после создания депозита?</h2>
 						<p>
-							Заходите в личный кабинет, пополняете его любыми из 3 представленных способов. Заходите в раздел ‘’контракты’’ выбираете количество контрактов и нажимаете купить. После чего ваша инвестиция будет оформлена и на следующий день вам начислят ваши первые проценты. Чем больше контрактов, тем больше % доходности.
+							Прибыль вы получаете на следующий день после приобретения контракта. Если контракт приобретен в выходной день, то первую прибыль вы получите в ближайший понедельник.
 						</p>
+
+						<h2>Есть ли ограничения на ввод и вывод?</h2>
+						<p>
+							Ограничений на пополнение личного кабинета нету. Минимальная сумма вывода равна 10$.
+						</p>
+
 						<h2>Какой регламент вывода средств?</h2>
 						<p>
-							Заходите в личный кабинет, пополняете его любыми из 3 представленных способов. Заходите в раздел ‘’контракты’’ выбираете количество контрактов и нажимаете купить. После чего ваша инвестиция будет оформлена и на следующий день вам начислят ваши первые проценты. Чем больше контрактов, тем больше % доходности.
+							На вывод вы можете ставить в любое время и в любой день. Регламент на вывод 72 рабочих часа. То есть после заявки, деньги придут на ваш электронный кошелек в течении 72 рабочих часов.
 						</p>
+
 						<h2>Как мне приглашать партнеров?</h2>
 						<p>
-							Заходите в личный кабинет, пополняете его любыми из 3 представленных способов. Заходите в раздел ‘’контракты’’ выбираете количество контрактов и нажимаете купить. После чего ваша инвестиция будет оформлена и на следующий день вам начислят ваши первые проценты. Чем больше контрактов, тем больше % доходности.
+							Чтобы приглашать партнеров и получать за них вознаграждения после их покупки контракта, у вас есть реферальная ссылка. Реферальную ссылку вы можете посмотреть в вашем личном  кабинете.
 						</p>
+
 						<h2>Что такое реферальные вознаграждения?</h2>
 						<p>
-							Заходите в личный кабинет, пополняете его любыми из 3 представленных способов. Заходите в раздел ‘’контракты’’ выбираете количество контрактов и нажимаете купить. После чего ваша инвестиция будет оформлена и на следующий день вам начислят ваши первые проценты. Чем больше контрактов, тем больше % доходности.
+							Реферальные вознаграждения это бонус, который вы получаете за приобретение контракта вашим приглашенным партнером. Проценты вы можете посмотреть в вашем личном кабинете.
 						</p>
+
 						<h2>Что такое ранги?</h2>
 						<p>
-							Заходите в личный кабинет, пополняете его любыми из 3 представленных способов. Заходите в раздел ‘’контракты’’ выбираете количество контрактов и нажимаете купить. После чего ваша инвестиция будет оформлена и на следующий день вам начислят ваши первые проценты. Чем больше контрактов, тем больше % доходности.
+							В компании существуют ранги. Есть 6 рангов, выполнив условия которых, вы можете дополнительно получить вознаграждения от 500$ до 30.000$. Подключайте больше партнеров, стройте большую команду и получайте большие бонусы помимо реферальных вознаграждений.
 						</p>
+
 						<h2>Как увеличить % доходности контрактов?</h2>
 						<p>
-							Заходите в личный кабинет, пополняете его любыми из 3 представленных способов. Заходите в раздел ‘’контракты’’ выбираете количество контрактов и нажимаете купить. После чего ваша инвестиция будет оформлена и на следующий день вам начислят ваши первые проценты. Чем больше контрактов, тем больше % доходности.
+							Что бы увеличить % доходности, вам нужно докупить контракты, пример: Вы находитесь на 3 уровне контрактов, у вас приобретено 19 контрактов, вы получаете 0,95% в сутки. Чтобы получить 4 уровень и выйти на доход в 1 % в сутки, вам нужно докупить всего 1 контракт. Тем самым все ваши 20 контрактов будут считаться по 1 % в сутки.
 						</p>
+
 						<h2>Какой срок действия контракта?</h2>
 						<p>
-							Заходите в личный кабинет, пополняете его любыми из 3 представленных способов. Заходите в раздел ‘’контракты’’ выбираете количество контрактов и нажимаете купить. После чего ваша инвестиция будет оформлена и на следующий день вам начислят ваши первые проценты. Чем больше контрактов, тем больше % доходности.
+							Контракт между партнером и компанией iCon заключается на 1 год.
 						</p>
+
 						<h2>Можно ли сделать депозит с одной платежной системы, а вывести на другую?</h2>
 						<p>
-							Заходите в личный кабинет, пополняете его любыми из 3 представленных способов. Заходите в раздел ‘’контракты’’ выбираете количество контрактов и нажимаете купить. После чего ваша инвестиция будет оформлена и на следующий день вам начислят ваши первые проценты. Чем больше контрактов, тем больше % доходности.
+							Да, вывод доступен на любую систему в компании.
 						</p>
+						
+						<h2>Что будет в случае регистрации более одного личного кабинета с одного IP адреса?</h2>
+						<p>
+							В компании строго запрещены мультиаккаунты. При использовании двух и больше аккаунтов с одного IP адреса, система безопасности автоматически вычисляет все ваши аккаунты и блокирует.
+						</p>
+
 						<h2>Что такое внутренняя валюта?</h2>
 						<p>
-							Заходите в личный кабинет, пополняете его любыми из 3 представленных способов. Заходите в раздел ‘’контракты’’ выбираете количество контрактов и нажимаете купить. После чего ваша инвестиция будет оформлена и на следующий день вам начислят ваши первые проценты. Чем больше контрактов, тем больше % доходности.
+							Внутренняя валюта, либо Внутрянка это деньги которые находятся на вашем балансе в личном кабинете. Вы можете переводить ее со своего аккаунта на аккаунты ваших партнеров без процентов.
 						</p>
 					</div>
 
