--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		<!-- fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500&amp;subset=cyrillic" rel="stylesheet">
 
-		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/style.css?ver=347">
 	</head>
 
 	<body>
@@ -281,10 +281,10 @@
 
 						<div class="legal-right-list">
 							<div class="legal-right-item">
-								<a href="img/legal-img1.jpg" class="popup-link1"><img src="img/legal-img1.jpg" alt="Icon trade. Invest company"></a>
+								<a href="img/certificate1.jpg" class="popup-link1"><img src="img/certificate1.jpg" alt="Icon trade. Invest company"></a>
 							</div>
 							<div class="legal-right-item">
-								<a href="img/legal-img2.jpg" class="popup-link1"><img src="img/legal-img2.jpg" alt="Icon trade. Invest company"></a>
+								<a href="img/certificate2.jpg" class="popup-link1"><img src="img/certificate2.jpg" alt="Icon trade. Invest company"></a>
 							</div>
 						</div>
 
