--- a/index.html
+++ b/index.html
@@ -281,10 +281,10 @@
 
 						<div class="legal-right-list">
 							<div class="legal-right-item">
-								<a href="img/certificate1.jpg" class="popup-link1"><img src="img/certificate1.jpg" alt="Icon trade. Invest company"></a>
+								<a href="img/cert1.jpg" class="popup-link1"><img src="img/cert1.jpg" alt="Icon trade. Invest company"></a>
 							</div>
 							<div class="legal-right-item">
-								<a href="img/certificate2.jpg" class="popup-link1"><img src="img/certificate2.jpg" alt="Icon trade. Invest company"></a>
+								<a href="img/cert2.jpg" class="popup-link1"><img src="img/cert2.jpg" alt="Icon trade. Invest company"></a>
 							</div>
 						</div>
 
