--- a/index.html
+++ b/index.html
@@ -152,25 +152,25 @@
 						<img src="img/out-team-photo1.png" alt="Icon trade. Invest company">
 						<h3>Alexandro Edulla</h3>
 						<p>Заработано за прошедший год:</p>
-						<span>283-294%</span>
+						<span>283%-294%</span>
 					</div>
 					<div class="our-team-item">
 						<img src="img/out-team-photo2.png" alt="Icon trade. Invest company">
 						<h3>Artem Maeyskiy</h3>
 						<p>Заработано за прошедший год:</p>
-						<span class="item-bg">312-340%</span>
+						<span class="item-bg">312%-340%</span>
 					</div>
 					<div class="our-team-item">
 						<img src="img/out-team-photo3.png" alt="Icon trade. Invest company">
 						<h3>Roman Kushnarev</h3>
 						<p>Заработано за прошедший год:</p>
-						<span>162-170%</span>
+						<span>162%-170%</span>
 					</div>
 					<div class="our-team-item">
 						<img src="img/out-team-photo4.png" alt="Icon trade. Invest company">
 						<h3>Denis Cyplenkov</h3>
 						<p>Заработано за прошедший год:</p>
-						<span class="item-bg">383-395%</span>
+						<span class="item-bg">383%-395%</span>
 					</div>
 				</div>
 			</div>
@@ -281,10 +281,10 @@
 
 						<div class="legal-right-list">
 							<div class="legal-right-item">
-								<a href="img/cert1.jpg" class="popup-link1"><img src="img/cert1.jpg" alt="Icon trade. Invest company"></a>
+								<a href="img/certificate1.jpg" class="popup-link1"><img src="img/certificate1.jpg" alt="Icon trade. Invest company"></a>
 							</div>
 							<div class="legal-right-item">
-								<a href="img/cert2.jpg" class="popup-link1"><img src="img/cert2.jpg" alt="Icon trade. Invest company"></a>
+								<a href="img/certificate2.jpg" class="popup-link1"><img src="img/certificate2.jpg" alt="Icon trade. Invest company"></a>
 							</div>
 						</div>
 
