--- a/reminder.html
+++ b/reminder.html
@@ -124,13 +124,13 @@
 				</div>
 
 				<div class="footer-right">
-					<p>Юридический адрес:</p>
+					<!-- <p>Юридический адрес:</p>
 					<address>
 						170 Oxford Street, London, United Kingdom, W1D 1NQ
-					</address>
+					</address> -->
 
 					<p>Тех. поддержка</p>
-					<a href="mailto:admin@prometherium.com">admin@prometherium.com</a>
+					<a href="mailto:admin@prometherium.com">admin@icontrade.com</a>
 
 					<p>Платежные системы:</p>
 					<img src="img/footer-payeer.png" alt="Icon trade. Invest company">
