--- a/faq.html
+++ b/faq.html
@@ -173,7 +173,7 @@
 
 					<div class="header-promo-bottom-faq-email">
 						<img src="img/faq-icon.png" alt="Icon trade. Invest company">
-						<p>Если Вы не нашли ответ на свой вопрос, то можете<br> обратиться в нашу <a href="mailto:"><b>тех-поддержку</b></a>.</p>
+						<p>Если Вы не нашли ответ на свой вопрос, то можете<br> обратиться в нашу <a href="mailto:admin@icontrade.ltd"><b>тех-поддержку</b></a>.</p>
 					</div>
 				</section>
 
@@ -199,13 +199,13 @@
 				</div>
 
 				<div class="footer-right">
-					<p>Юридический адрес:</p>
+					<!-- <p>Юридический адрес:</p>
 					<address>
 						170 Oxford Street, London, United Kingdom, W1D 1NQ
-					</address>
+					</address> -->
 
 					<p>Тех. поддержка</p>
-					<a href="mailto:admin@prometherium.com">admin@prometherium.com</a>
+					<a href="mailto:admin@prometherium.com">admin@icontrade.com</a>
 
 					<p>Платежные системы:</p>
 					<img src="img/footer-payeer.png" alt="Icon trade. Invest company">
