--- a/2/ref.html
+++ b/2/ref.html
@@ -205,38 +205,38 @@
 				  	<h4>qwertyqer@gmail.com</h4>
 				  	<p class="first"><span>245</span> контрактов</p>
 				  	<p class="second"><span>4500</span> USD</p>
-				  	<a href="#">Открыть ветку</a>
+				  	<a href="#" class="ref-list-js">Открыть ветку</a>
 				  </div>
 				  <div>
 				  	<h3>Гурин Иван Иванович</h3>
 				  	<h4>qwertyqer@gmail.com</h4>
 				  	<p class="first"><span>245</span> контрактов</p>
 				  	<p class="second"><span>4500</span> USD</p>
-				  	<a href="#">Открыть ветку</a>
+				  	<a href="#" class="ref-list-js">Открыть ветку</a>
 				  </div><div>
 				  	<h3>Гурин Иван Иванович</h3>
 				  	<h4>qwertyqer@gmail.com</h4>
 				  	<p class="first"><span>245</span> контрактов</p>
 				  	<p class="second"><span>4500</span> USD</p>
-				  	<a href="#">Открыть ветку</a>
+				  	<a href="#" class="ref-list-js">Открыть ветку</a>
 				  </div><div>
 				  	<h3>Гурин Иван Иванович</h3>
 				  	<h4>qwertyqer@gmail.com</h4>
 				  	<p class="first"><span>245</span> контрактов</p>
 				  	<p class="second"><span>4500</span> USD</p>
-				  	<a href="#">Открыть ветку</a>
+				  	<a href="#" class="ref-list-js">Открыть ветку</a>
 				  </div><div>
 				  	<h3>Гурин Иван Иванович</h3>
 				  	<h4>qwertyqer@gmail.com</h4>
 				  	<p class="first"><span>245</span> контрактов</p>
 				  	<p class="second"><span>4500</span> USD</p>
-				  	<a href="#">Открыть ветку</a>
+				  	<a href="#" class="ref-list-js">Открыть ветку</a>
 				  </div><div>
 				  	<h3>Гурин Иван Иванович</h3>
 				  	<h4>qwertyqer@gmail.com</h4>
 				  	<p class="first"><span>245</span> контрактов</p>
 				  	<p class="second"><span>4500</span> USD</p>
-				  	<a href="#">Открыть ветку</a>
+				  	<a href="#" class="ref-list-js">Открыть ветку</a>
 				  </div>
 				</div>
 			</div>
@@ -442,7 +442,6 @@
 		<div class="popup-overlay"></div>
 
 
-
 		<!-- scripts -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 		<!-- <script src="libs/wow.min.js"></script> -->
@@ -469,7 +468,23 @@
 		  		});
 		  	}
 
+
+
+		  	function _saveimg(){
+			  	$("#file").click();
+			  	}
+
+			  	function _save(){
+			  	$("#go").submit();
+		  	}
 			});
+		</script>
+
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.4.0/clipboard.min.js"></script>
+		<script>
+			(function(){
+				new Clipboard('#copy-button');
+			})();
 		</script>
 
 		<script src="js/index-page.js"></script>
