--- a/1/reset_password.html
+++ b/1/reset_password.html
@@ -34,11 +34,15 @@
 					Copyright &copy; 2019 iCURRENTGLOBAL. All rights reserved
 				</div>
 			</div>
-		</footer> --><!-- popup + email --><!-- <a class="js-popup" href="#">открыть popup</a> --><div class="popup"><h3>Оставьте Ваши контакты, и мы с Вами свяжемся!</h3><form class="main-form" action="mailer/smart.php" method="POST"><!-- <input type="hidden" name="user_data" value=""><br> --> <input type="text" name="name" placeholder="Имя" required> <input type="text" name="phone" placeholder="Телефон" required> <input type="email" name="email" placeholder="Email" required> <button type="submit">Отправить</button></form><button type="button" class="close js-close-popup"></button></div><div class="popup-overlay"></div><!-- <div class="popup2">
-			<h3>Ваша заявка отправлена!</h3>
-			<p>
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis fugiat temporibus sint suscipit illum odit quas fugit nihil maxime pariatur enim reprehenderit, earum, magni odio atque, a consequuntur quae ab!
-			</p>
+		</footer> --><!-- popup + email --><!-- <a class="js-popup" href="#">открыть popup</a> --><!-- 	<div class="popup">
+			<h3>Оставьте Ваши контакты, и мы с Вами свяжемся!</h3>
+			<form class="main-form" action="mailer/smart.php" method="POST">
+				<input type="text" name="name" placeholder="Имя" required>
+				<input type="text" name="phone" placeholder="Телефон" required>
+				<input type="email" name="email" placeholder="Email" required>
+
+				<button type="submit">Отправить</button>
+			</form>
 			<button type="button" class="close js-close-popup"></button>
 		</div>
 		<div class="popup-overlay"></div> --><div class="arrow"><a class="go_to1" href="body"><img src="img/scrolltotop.png" alt="Up"></a></div><!-- scripts --><script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script><script src="libs/wow.min.js"></script><script src="libs/jquery.magnific-popup/jquery.magnific-popup.min.js"></script><script>$(document).ready(function() {
