--- a/1/index.html
+++ b/1/index.html
@@ -227,7 +227,8 @@
 							<p>Select a Payment Method.</p>
 							<div class="example__left-top-right-buttons">
 								<button type="button" data-current="$">Dollar</button>
-								<button type="button" data-current="&#8364;">Euro</button>
+								<!-- <button type="button" data-current="&#8364;">Euro</button> -->
+								<button type="button" data-current="LTC">Litecoin</button>
 								<button type="button" data-current="BTC">Bitcoin</button>
 								<button type="button" data-current="ETH">Ethereum</button>
 							</div>
